# FastApp

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
fastapp/: __main__.py
fastapp/app/: main.py
fastapp/app/api/: __init__.py  docs.py  redirect.py
fastapp/app/api/v1/: __init__.py  deps.py
fastapp/app/api/v1/endpoints/: auth.py  stats.py  urls.py  users.py
fastapp/app/core/: config.py  logging.py  security.py
fastapp/app/db/: init_db.py
fastapp/app/middlewares/: __init__.py  botwatchdepths.py  correlation.py
fastapp/app/models/: __init__.py  depth.py  url.py  user.py
fastapp/app/schemas/: __init__.py  depth.py  error.py  url.py  user.py
fastapp/app/utils/: BotWatchDepths.py  ConnectionManager.py  Timeframe.py  __init__.py  cbv.py  pagination.py
fastapp/app/utils/Binance/: Future.py  Spot.py  StreamFuture.py  StreamSpot.py  __init__.py  defines.py  types.pyxxxx
scripts/: check  lint
