[tool.poetry]
name = "fastapp"
version = "0.1.10"
description = "fastapp"
authors = ["itgiup <itgiup.com@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/itgiup/FastApp"

[tool.poetry.dependencies]
python = "^3.12.7"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
beanie = "^1.27.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
structlog = "^24.4.0"
colorama = "^0.4.6"
pendulum = "^3.0.0"
requests = "^2.32.3"
pydantic-settings = "^2.6.1"
orjson = "^3.10.12"
bcrypt = "^4.2.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.8.0"
mypy = "^1.13.0"
black = "^24.10.0"
pre-commit = "^4.0.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/itgiup"

[tool.isort]
profile = "black"
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black.
    "B008",  # do not perform function calls in argument defaults.
    "B010",  # Do not call `setattr` with a constant attribute value.
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.per-file-ignores]
# Ignore `F401` violations in any `__init__.py` file.
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
